# cosmos-proposals

./: Cargo.toml  NOTICE  README.md
artifacts/: cosmos_voting.wasm
src/: contract.rs  error.rs  msg.rs  state.rs
